--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
     function populateMonthYearDropdown() {
       const startYear = 2021;
-      const startMonth = 5; // Janeiro
+      const startMonth = 5; // maio
       const endYear = 2025;
-      const endMonth = 3;   // Março
+      const endMonth = 4;   // abril
 
       for (let year = startYear; year <= endYear; year++) {
         const monthStart = (year === startYear) ? startMonth : 1;
