--- a/index.html
+++ b/index.html
@@ -28,10 +28,8 @@
 </head>
 <body>
 
-    <h1>Bem-vindo ao meu site</h1>
-
     <nav>
-        <h2>Navegação</h2>
+        <h2>Tabelas para o Estado do Paraná</h2>
         <ul>
             <li><a href="sinapi.html">SINAPI</a></li>
             <li><a href="sinapicomposicao.html">Composições SINAPI</a></li>
