--- a/sinapi.html
+++ b/sinapi.html
@@ -69,198 +69,205 @@
 
   <div id="div1"></div>
 
-  <script>
-    let originalDf;
-    const csvBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_";
-    const monthYearSelect = document.getElementById("monthYearSelect");
-    const filterBox = document.getElementById("filterBox");
-    const searchBtn = document.getElementById("searchBtn");
-    const div1 = document.getElementById("div1");
+ <script>
+    let originalDf;
+    // const csvBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_"; // Original CSV base URL
+    // Altere para o caminho base onde seus arquivos Excel estarão, mantendo o nome base
+    const fileBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_"; // Novo caminho base
 
-    function removeAcentos(texto) {
-      return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
-    }
+    const monthYearSelect = document.getElementById("monthYearSelect");
+    const filterBox = document.getElementById("filterBox");
+    const searchBtn = document.getElementById("searchBtn");
+    const div1 = document.getElementById("div1");
 
-    function populateMonthYearDropdown() {
-      const startYear = 2021;
-      const startMonth = 5; // maio
-      const endYear = 2025;
-      const endMonth = 4;   // abril
+    function removeAcentos(texto) {
+      return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
+    }
 
-      for (let year = startYear; year <= endYear; year++) {
-        const monthStart = (year === startYear) ? startMonth : 1;
-        const monthEnd = (year === endYear) ? endMonth : 12;
+    function populateMonthYearDropdown() {
+      const startYear = 2021;
+      const startMonth = 5; // maio
+      const endYear = 2025;
+      const endMonth = 4;   // abril
 
-        for (let month = monthStart; month <= monthEnd; month++) {
-          const monthPadded = String(month).padStart(2, '0');
-          const optionValue = `${year}_${monthPadded}`;
-          const optionText = `${year}/${monthPadded}`;
+      for (let year = startYear; year <= endYear; year++) {
+        const monthStart = (year === startYear) ? startMonth : 1;
+        const monthEnd = (year === endYear) ? endMonth : 12;
 
-          const option = document.createElement("option");
-          option.value = optionValue;
-          option.textContent = optionText;
-          monthYearSelect.appendChild(option);
-        }
-      }
-      // Opcional: definir um valor padrão (ex: o primeiro da lista ou o mais recente)
-      // Aqui, vamos pegar o primeiro como padrão, que será 2024_01
-      if (monthYearSelect.options.length > 0) {
-        // Se quiser o mais recente como padrão (o último da lista):
-        // monthYearSelect.selectedIndex = monthYearSelect.options.length - 1;
-      }
-    }
+        for (let month = monthStart; month <= monthEnd; month++) {
+          const monthPadded = String(month).padStart(2, '0');
+          const optionValue = `${year}_${monthPadded}`;
+          const optionText = `${year}/${monthPadded}`;
 
-function loadAndProcessCsv(yearMonth) {
-      const csvUrl = `${csvBaseUrl}${yearMonth}.csv`;
+          const option = document.createElement("option");
+          option.value = optionValue;
+          option.textContent = optionText;
+          monthYearSelect.appendChild(option);
+        }
+      }
+      // Opcional: definir um valor padrão (ex: o primeiro da lista ou o mais recente)
+      // Aqui, vamos pegar o primeiro como padrão, que será 2024_01
+      if (monthYearSelect.options.length > 0) {
+        // Se quiser o mais recente como padrão (o último da lista):
+        // monthYearSelect.selectedIndex = monthYearSelect.options.length - 1;
+      }
+    }
 
-      // --- ALERTA TEMPORÁRIO ---
-      //alert("Procurando CSV em: " + csvUrl);
-      // --- FIM DO ALERTA TEMPORÁRIO ---
+// Função modificada para carregar arquivos Excel
+function loadAndProcessFile(yearMonth) {
+      // Constrói a URL com a extensão .xlsx
+      const fileUrl = `${fileBaseUrl}${yearMonth}.xlsx`;
 
-      div1.innerHTML = `<p class="loading-message">Carregando dados para ${yearMonth.replace("_", "/")}...</p>`;
-      filterBox.value = ""; // Limpa o filtro ao carregar novos dados
+      // --- ALERTA TEMPORÁRIO ---
+      //alert("Procurando arquivo Excel em: " + fileUrl);
+      // --- FIM DO ALERTA TEMPORÁRIO ---
 
-      dfd.readCSV(csvUrl, {
-        delimiter: ';',
-        encoding: 'utf-8'
-      })
-      .then(df => {
-        originalDf = df;
-        console.log(`Dados carregados para ${yearMonth}. Nomes das colunas:`, df.columns);
-        renderTable(df);
-      })
-      .catch(err => {
-        console.error(`Erro ao carregar o CSV para ${yearMonth}:`, err);
-        div1.innerHTML = `<p>Erro ao carregar ou processar o CSV para ${yearMonth.replace("_", "/")}. Verifique se o arquivo existe e o console para mais detalhes.</p>`;
-        originalDf = null; // Garante que não tentaremos filtrar dados inexistentes
-      });
-    }
+      // Atualiza a mensagem de carregamento para indicar que é um arquivo Excel
+      div1.innerHTML = `<p class="loading-message">Carregando dados Excel para ${yearMonth.replace("_", "/")}...</p>`;
+      filterBox.value = ""; // Limpa o filtro ao carregar novos dados
 
-    function renderTable(df) {
-      div1.innerHTML = ""; // Limpa a mensagem de "carregando" ou tabela anterior
+      // Usa dfd.readExcel() em vez de dfd.readCSV()
+      dfd.readExcel(fileUrl)
+      .then(df => {
+        originalDf = df;
+        console.log(`Dados Excel carregados para ${yearMonth}. Nomes das colunas:`, df.columns);
+        renderTable(df);
+      })
+      .catch(err => {
+        // Atualiza a mensagem de erro
+        console.error(`Erro ao carregar o arquivo Excel para ${yearMonth}:`, err);
+        div1.innerHTML = `<p>Erro ao carregar ou processar o arquivo Excel para ${yearMonth.replace("_", "/")}. Verifique se o arquivo existe e o console para mais detalhes.</p>`;
+        originalDf = null; // Garante que não tentaremos filtrar dados inexistentes
+      });
+    }
 
-      if (!df || df.isEmpty) {
-        div1.innerHTML = "<p>Nenhum dado para exibir.</p>";
-        return;
-      }
+    function renderTable(df) {
+      div1.innerHTML = ""; // Limpa a mensagem de "carregando" ou tabela anterior
 
-      const table = document.createElement("table");
+      if (!df || df.isEmpty) {
+        div1.innerHTML = "<p>Nenhum dado para exibir.</p>";
+        return;
+      }
 
-      // Cabeçalho
-      const thead = document.createElement("thead");
-      const headerRow = document.createElement("tr");
-      df.columns.forEach(col => {
-        const th = document.createElement("th");
-        th.textContent = col;
-        headerRow.appendChild(th);
-      });
-      thead.appendChild(headerRow);
-      table.appendChild(thead);
+      const table = document.createElement("table");
 
-      // Corpo da tabela
-      const tbody = document.createElement("tbody");
-      df.values.forEach(row => {
-        const tr = document.createElement("tr");
-        row.forEach(cell => {
-          const td = document.createElement("td");
-          td.textContent = cell;
-          tr.appendChild(td);
-        });
-        tbody.appendChild(tr);
-      });
-      table.appendChild(tbody);
+      // Cabeçalho
+      const thead = document.createElement("thead");
+      const headerRow = document.createElement("tr");
+      df.columns.forEach(col => {
+        const th = document.createElement("th");
+        th.textContent = col;
+        headerRow.appendChild(th);
+      });
+      thead.appendChild(headerRow);
+      table.appendChild(thead);
 
-      div1.appendChild(table);
-    }
+      // Corpo da tabela
+      const tbody = document.createElement("tbody");
+      df.values.forEach(row => {
+        const tr = document.createElement("tr");
+        row.forEach(cell => {
+          const td = document.createElement("td");
+          td.textContent = cell;
+          tr.appendChild(td);
+        });
+        tbody.appendChild(tr);
+      });
+      table.appendChild(tbody);
 
-    function applyFilter() {
-      if (!originalDf) {
-        // alert("Por favor, selecione um Mês/Ano para carregar os dados primeiro.");
-        // Ou apenas renderiza uma tabela vazia/mensagem
-        renderTable(new dfd.DataFrame()); // Renderiza tabela vazia
-        return;
-      }
+      div1.appendChild(table);
+    }
 
-      const input = removeAcentos(filterBox.value.trim().toLowerCase());
+    function applyFilter() {
+      if (!originalDf) {
+        // alert("Por favor, selecione um Mês/Ano para carregar os dados primeiro.");
+        // Ou apenas renderiza uma tabela vazia/mensagem
+        renderTable(new dfd.DataFrame()); // Renderiza tabela vazia
+        return;
+      }
 
-      if (input === "") {
-        renderTable(originalDf);
-        return;
-      }
+      const input = removeAcentos(filterBox.value.trim().toLowerCase());
 
-      const keywords = input.split(/\s+/).filter(k => k.length > 0); // Filtra strings vazias
-      if (keywords.length === 0) {
-        renderTable(originalDf);
-        return;
-      }
+      if (input === "") {
+        renderTable(originalDf);
+        return;
+      }
 
-      const matchingRows = [];
+      const keywords = input.split(/\s+/).filter(k => k.length > 0); // Filtra strings vazias
+      if (keywords.length === 0) {
+        renderTable(originalDf);
+        return;
+      }
 
-      // Tentar encontrar a coluna de descrição dinamicamente, priorizando "Descrição"
-      let descColumnName = "Descrição"; // Nome esperado
-      if (!originalDf.columns.includes(descColumnName)) {
-          // Tenta encontrar uma coluna que comece com "Descri" ignorando case e acentos
-          const possibleDescCols = originalDf.columns.filter(col =>
-              removeAcentos(col.toLowerCase()).startsWith("descri")
-          );
-          if (possibleDescCols.length > 0) {
-              descColumnName = possibleDescCols[0];
-              console.warn(`Coluna "Descrição" não encontrada. Usando "${descColumnName}" para filtro.`);
-          } else {
-              console.error("Coluna de descrição não encontrada para filtro. Nomes das colunas:", originalDf.columns);
-              div1.innerHTML += "<p style='color:red;'>Erro: Coluna de descrição não encontrada para realizar o filtro.</p>";
-              return; // Não pode filtrar sem a coluna
-          }
-      }
+      const matchingRows = [];
+
+      // Tentar encontrar a coluna de descrição dinamicamente, priorizando "Descrição"
+      let descColumnName = "Descrição"; // Nome esperado
+      if (!originalDf.columns.includes(descColumnName)) {
+          // Tenta encontrar uma coluna que comece com "Descri" ignorando case e acentos
+          const possibleDescCols = originalDf.columns.filter(col =>
+              removeAcentos(col.toLowerCase()).startsWith("descri")
+          );
+          if (possibleDescCols.length > 0) {
+              descColumnName = possibleDescCols[0];
+              console.warn(`Coluna "Descrição" não encontrada. Usando "${descColumnName}" para filtro.`);
+          } else {
+              console.error("Coluna de descrição não encontrada para filtro. Nomes das colunas:", originalDf.columns);
+              div1.innerHTML += "<p style='color:red;'>Erro: Coluna de descrição não encontrada para realizar o filtro.</p>";
+              return; // Não pode filtrar sem a coluna
+          }
+      }
 
 
-      for (let i = 0; i < originalDf.shape[0]; i++) {
-        const rowDf = originalDf.loc({ rows: [i] });
-        const cellValue = rowDf.column(descColumnName).values[0];
-        const cellRaw = String(cellValue === null || cellValue === undefined ? "" : cellValue);
-        const cell = removeAcentos(cellRaw.toLowerCase());
+      for (let i = 0; i < originalDf.shape[0]; i++) {
+        const rowDf = originalDf.loc({ rows: [i] });
+        const cellValue = rowDf.column(descColumnName).values[0];
+        const cellRaw = String(cellValue === null || cellValue === undefined ? "" : cellValue);
+        const cell = removeAcentos(cellRaw.toLowerCase());
 
-        const matches = keywords.every(word => cell.includes(word));
-        if (matches) matchingRows.push(i);
-      }
+        const matches = keywords.every(word => cell.includes(word));
+        if (matches) matchingRows.push(i);
+      }
 
-      if (matchingRows.length > 0) {
-        const filteredDf = originalDf.loc({ rows: matchingRows });
-        renderTable(filteredDf);
-      } else {
-        div1.innerHTML = "<p>Nenhum resultado encontrado para o filtro aplicado.</p>";
-        // Opcional: exibir a tabela vazia com cabeçalhos
-        // const emptyDfWithCols = new dfd.DataFrame([], { columns: originalDf.columns });
-        // renderTable(emptyDfWithCols);
-      }
-    }
+      if (matchingRows.length > 0) {
+        const filteredDf = originalDf.loc({ rows: matchingRows });
+        renderTable(filteredDf);
+      } else {
+        div1.innerHTML = "<p>Nenhum resultado encontrado para o filtro aplicado.</p>";
+        // Opcional: exibir a tabela vazia com cabeçalhos
+        // const emptyDfWithCols = new dfd.DataFrame([], { columns: originalDf.columns });
+        // renderTable(emptyDfWithCols);
+      }
+    }
 
-    // --- Inicialização ---
-    document.addEventListener('DOMContentLoaded', () => {
-      populateMonthYearDropdown();
+    // --- Inicialização ---
+    document.addEventListener('DOMContentLoaded', () => {
+      populateMonthYearDropdown();
 
-      // Carrega o CSV para o mês/ano selecionado inicialmente
-      if (monthYearSelect.value) {
-        loadAndProcessCsv(monthYearSelect.value);
-      }
+      // Carrega o arquivo para o mês/ano selecionado inicialmente
+      if (monthYearSelect.value) {
+        // Chamando a nova função
+        loadAndProcessFile(monthYearSelect.value);
+      }
 
-      // Adiciona listener para o dropdown
-      monthYearSelect.addEventListener("change", (event) => {
-        loadAndProcessCsv(event.target.value);
-      });
+      // Adiciona listener para o dropdown
+      monthYearSelect.addEventListener("change", (event) => {
+        // Chamando a nova função
+        loadAndProcessFile(event.target.value);
+      });
 
-      // Adiciona listener para o botão de procurar
-      searchBtn.addEventListener("click", applyFilter);
+      // Adiciona listener para o botão de procurar
+      searchBtn.addEventListener("click", applyFilter);
 
-      // Opcional: aplicar filtro ao pressionar Enter no input
-      filterBox.addEventListener("keypress", (event) => {
-        if (event.key === "Enter") {
-          applyFilter();
-        }
-      });
-    });
+      // Opcional: aplicar filtro ao pressionar Enter no input
+      filterBox.addEventListener("keypress", (event) => {
+        if (event.key === "Enter") {
+          applyFilter();
+        }
+      });
+    });
 
-  </script>
+  </script>
 
 </body>
 </html>
