--- a/sinapi.html
+++ b/sinapi.html
@@ -1,273 +1,251 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script src="https://cdn.jsdelivr.net/npm/danfojs@1.2.0/lib/bundle.js"></script>
-  <title>Exibir CSV com Filtro e Seleção de Mês/Ano</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 20px;
-    }
-    .controls {
-      margin-bottom: 15px;
-      display: flex;
-      align-items: center;
-      gap: 10px; /* Espaçamento entre os controles */
-    }
-    #monthYearSelect,
-    #filterBox {
-      padding: 8px;
-      /* width: 100%; */ /* Removido para melhor ajuste com flex */
-      /* max-width: 300px; */ /* Removido ou ajustado se necessário */
-      /* margin-right: 10px; */ /* Removido, usando gap */
-    }
-    #monthYearSelect {
-        min-width: 150px; /* Largura mínima para o select */
-    }
-    #filterBox {
-        flex-grow: 1; /* Faz o input de filtro ocupar o espaço restante */
-        max-width: 400px;
-    }
-    #searchBtn {
-      padding: 8px 16px;
-    }
-    #div1 {
-      margin-top: 15px;
-      max-height: 800px;
-      overflow-y: auto;
-    }
-    #div1 table {
-      width: 100%;
-      border-collapse: collapse;
-    }
-    #div1 th, #div1 td {
-      border: 1px solid #ddd;
-      padding: 8px;
-      text-align: left;
-    }
-    #div1 th {
-      background-color: #f2f2f2;
-    }
-    .loading-message {
-        font-style: italic;
-        color: #555;
-    }
-  </style>
-</head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.jsdelivr.net/npm/danfojs@1.2.0/lib/bundle.js"></script>
+    <title>Exibir CSV com Filtro e Seleção de Mês/Ano</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        .controls {
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 10px; /* Espaçamento entre os controles */
+        }
+        #monthYearSelect,
+        #filterBox {
+            padding: 8px;
+            /* Removido ou ajustado conforme necessário */
+        }
+        #monthYearSelect {
+            min-width: 150px; /* Largura mínima para o select */
+        }
+        #filterBox {
+            flex-grow: 1; /* Faz o input de filtro ocupar o espaço restante */
+            max-width: 400px;
+        }
+        #searchBtn {
+            padding: 8px 16px;
+        }
+        #div1 {
+            margin-top: 15px;
+            max-height: 800px;
+            overflow-y: auto;
+        }
+        #div1 table {
+            width: 100%;
+            border-collapse: collapse;
+        }
+        #div1 th, #div1 td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+        #div1 th {
+            background-color: #f2f2f2;
+        }
+        .loading-message {
+            font-style: italic;
+            color: #555;
+        }
+    </style>
+    </head>
 <body>
 
-  <div class="controls">
-    <div>
-        <label for="monthYearSelect">Selecione o Mês/Ano:</label>
-        <select id="monthYearSelect"></select>
+    <div class="controls">
+        <div>
+            <label for="monthYearSelect">Selecione o Mês/Ano:</label>
+            <select id="monthYearSelect"></select>
+        </div>
+        <input type="text" id="filterBox" placeholder="Digite palavras para filtrar (ex: parede 30)" />
+        <button id="searchBtn">Procurar</button>
     </div>
-    <input type="text" id="filterBox" placeholder="Digite palavras para filtrar (ex: parede 30)" />
-    <button id="searchBtn">Procurar</button>
-  </div>
 
-  <div id="div1"></div>
+    <div id="div1"></div>
 
- <script>
-    let originalDf;
-    // const csvBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_"; // Original CSV base URL
-    // Altere para o caminho base onde seus arquivos Excel estarão, mantendo o nome base
-    const fileBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_"; // Novo caminho base
+    <script>
+        let originalDf;
+        const fileBaseUrl = "https://raw.githubusercontent.com/gabrielpontalparana/gabrielpontalparana.github.io/main/Sinapi/dados_sinapi_"; // Caminho base
 
-    const monthYearSelect = document.getElementById("monthYearSelect");
-    const filterBox = document.getElementById("filterBox");
-    const searchBtn = document.getElementById("searchBtn");
-    const div1 = document.getElementById("div1");
+        const monthYearSelect = document.getElementById("monthYearSelect");
+        const filterBox = document.getElementById("filterBox");
+        const searchBtn = document.getElementById("searchBtn");
+        const div1 = document.getElementById("div1");
 
-    function removeAcentos(texto) {
-      return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
-    }
+        function removeAcentos(texto) {
+            return texto.normalize("NFD").replace(/[\u0300-\u036f]/g, "");
+        }
 
-    function populateMonthYearDropdown() {
-      const startYear = 2021;
-      const startMonth = 5; // maio
-      const endYear = 2025;
-      const endMonth = 4;   // abril
+        function populateMonthYearDropdown() {
+            const startYear = 2021;
+            const startMonth = 5; // maio
+            const endYear = 2025;
+            const endMonth = 4;    // abril
 
-      for (let year = startYear; year <= endYear; year++) {
-        const monthStart = (year === startYear) ? startMonth : 1;
-        const monthEnd = (year === endYear) ? endMonth : 12;
+            for (let year = startYear; year <= endYear; year++) {
+                const monthStart = (year === startYear) ? startMonth : 1;
+                const monthEnd = (year === endYear) ? endMonth : 12;
 
-        for (let month = monthStart; month <= monthEnd; month++) {
-          const monthPadded = String(month).padStart(2, '0');
-          const optionValue = `${year}_${monthPadded}`;
-          const optionText = `${year}/${monthPadded}`;
+                for (let month = monthStart; month <= monthEnd; month++) {
+                    const monthPadded = String(month).padStart(2, '0');
+                    const optionValue = `${year}_${monthPadded}`;
+                    const optionText = `${year}/${monthPadded}`;
 
-          const option = document.createElement("option");
-          option.value = optionValue;
-          option.textContent = optionText;
-          monthYearSelect.appendChild(option);
-        }
-      }
-      // Opcional: definir um valor padrão (ex: o primeiro da lista ou o mais recente)
-      // Aqui, vamos pegar o primeiro como padrão, que será 2024_01
-      if (monthYearSelect.options.length > 0) {
-        // Se quiser o mais recente como padrão (o último da lista):
-        // monthYearSelect.selectedIndex = monthYearSelect.options.length - 1;
-      }
-    }
+                    const option = document.createElement("option");
+                    option.value = optionValue;
+                    option.textContent = optionText;
+                    monthYearSelect.appendChild(option);
+                }
+            }
+            if (monthYearSelect.options.length > 0) {
+                // monthYearSelect.selectedIndex = monthYearSelect.options.length - 1; // Opcional: último como padrão
+            }
+        }
 
-// Função modificada para carregar arquivos Excel
-function loadAndProcessFile(yearMonth) {
-      // Constrói a URL com a extensão .xlsx
-      const fileUrl = `${fileBaseUrl}${yearMonth}.xlsx`;
+        function loadAndProcessFile(yearMonth) {
+            const fileUrl = `${fileBaseUrl}${yearMonth}.xlsx`;
 
-      // --- ALERTA TEMPORÁRIO ---
-      //alert("Procurando arquivo Excel em: " + fileUrl);
-      // --- FIM DO ALERTA TEMPORÁRIO ---
+            div1.innerHTML = `<p class="loading-message">Carregando dados Excel para ${yearMonth.replace("_", "/")}...</p>`;
+            filterBox.value = ""; // Limpa o filtro
 
-      // Atualiza a mensagem de carregamento para indicar que é um arquivo Excel
-      div1.innerHTML = `<p class="loading-message">Carregando dados Excel para ${yearMonth.replace("_", "/")}...</p>`;
-      filterBox.value = ""; // Limpa o filtro ao carregar novos dados
+            dfd.readExcel(fileUrl)
+            .then(df => {
+                originalDf = df;
+                console.log(`Dados Excel carregados para ${yearMonth}. Nomes das colunas:`, df.columns);
+                renderTable(df);
+            })
+            .catch(err => {
+                console.error(`Erro ao carregar o arquivo Excel para ${yearMonth}:`, err);
+                div1.innerHTML = `<p>Erro ao carregar ou processar o arquivo Excel para ${yearMonth.replace("_", "/")}. Verifique se o arquivo existe e o console para mais detalhes.</p>`;
+                originalDf = null;
+            });
+        }
 
-      // Usa dfd.readExcel() em vez de dfd.readCSV()
-      dfd.readExcel(fileUrl)
-      .then(df => {
-        originalDf = df;
-        console.log(`Dados Excel carregados para ${yearMonth}. Nomes das colunas:`, df.columns);
-        renderTable(df);
-      })
-      .catch(err => {
-        // Atualiza a mensagem de erro
-        console.error(`Erro ao carregar o arquivo Excel para ${yearMonth}:`, err);
-        div1.innerHTML = `<p>Erro ao carregar ou processar o arquivo Excel para ${yearMonth.replace("_", "/")}. Verifique se o arquivo existe e o console para mais detalhes.</p>`;
-        originalDf = null; // Garante que não tentaremos filtrar dados inexistentes
-      });
-    }
+        function renderTable(df) {
+            div1.innerHTML = "";
 
-    function renderTable(df) {
-      div1.innerHTML = ""; // Limpa a mensagem de "carregando" ou tabela anterior
+            if (!df || df.isEmpty) {
+                div1.innerHTML = "<p>Nenhum dado para exibir.</p>";
+                return;
+            }
 
-      if (!df || df.isEmpty) {
-        div1.innerHTML = "<p>Nenhum dado para exibir.</p>";
-        return;
-      }
+            const table = document.createElement("table");
+            const thead = document.createElement("thead");
+            const headerRow = document.createElement("tr");
 
-      const table = document.createElement("table");
+            df.columns.forEach(col => {
+                const th = document.createElement("th");
+                th.textContent = col;
+                headerRow.appendChild(th);
+            });
+            thead.appendChild(headerRow);
+            table.appendChild(thead);
 
-      // Cabeçalho
-      const thead = document.createElement("thead");
-      const headerRow = document.createElement("tr");
-      df.columns.forEach(col => {
-        const th = document.createElement("th");
-        th.textContent = col;
-        headerRow.appendChild(th);
-      });
-      thead.appendChild(headerRow);
-      table.appendChild(thead);
+            const tbody = document.createElement("tbody");
+            df.values.forEach(row => {
+                const tr = document.createElement("tr");
+                row.forEach(cell => {
+                    const td = document.createElement("td");
 
-      // Corpo da tabela
-      const tbody = document.createElement("tbody");
-      df.values.forEach(row => {
-        const tr = document.createElement("tr");
-        row.forEach(cell => {
-          const td = document.createElement("td");
-          td.textContent = cell;
-          tr.appendChild(td);
-        });
-        tbody.appendChild(tr);
-      });
-      table.appendChild(tbody);
+                    // --- MODIFICAÇÃO AQUI: CONVERTE PARA STRING E SUBSTITUI PONTO POR VÍRGULA ---
+                    let cellContent = ""; // Conteúdo padrão vazio
+                    if (typeof cell === 'number' && !isNaN(cell)) {
+                        // Se for um número, converte para string e substitui o ponto por vírgula
+                        cellContent = String(cell).replace('.', ',');
+                    } else if (cell !== null && cell !== undefined) {
+                        // Para outros valores (texto, etc.) que não são null/undefined, usa o valor original como string
+                         cellContent = String(cell);
+                    }
+                     td.textContent = cellContent;
+                    // --- FIM DA MODIFICAÇÃO ---
 
-      div1.appendChild(table);
-    }
+                    tr.appendChild(td);
+                });
+                tbody.appendChild(tr);
+            });
+            table.appendChild(tbody);
 
-    function applyFilter() {
-      if (!originalDf) {
-        // alert("Por favor, selecione um Mês/Ano para carregar os dados primeiro.");
-        // Ou apenas renderiza uma tabela vazia/mensagem
-        renderTable(new dfd.DataFrame()); // Renderiza tabela vazia
-        return;
-      }
+            div1.appendChild(table);
+        }
 
-      const input = removeAcentos(filterBox.value.trim().toLowerCase());
+        function applyFilter() {
+            if (!originalDf) {
+                renderTable(new dfd.DataFrame());
+                return;
+            }
 
-      if (input === "") {
-        renderTable(originalDf);
-        return;
-      }
+            const input = removeAcentos(filterBox.value.trim().toLowerCase());
 
-      const keywords = input.split(/\s+/).filter(k => k.length > 0); // Filtra strings vazias
-      if (keywords.length === 0) {
-        renderTable(originalDf);
-        return;
-      }
+            if (input === "") {
+                renderTable(originalDf); // renderTable já aplica a formatação
+                return;
+            }
 
-      const matchingRows = [];
+            const keywords = input.split(/\s+/).filter(k => k.length > 0);
+            if (keywords.length === 0) {
+                renderTable(originalDf); // renderTable já aplica a formatação
+                return;
+            }
 
-      // Tentar encontrar a coluna de descrição dinamicamente, priorizando "Descrição"
-      let descColumnName = "Descrição"; // Nome esperado
-      if (!originalDf.columns.includes(descColumnName)) {
-          // Tenta encontrar uma coluna que comece com "Descri" ignorando case e acentos
-          const possibleDescCols = originalDf.columns.filter(col =>
-              removeAcentos(col.toLowerCase()).startsWith("descri")
-          );
-          if (possibleDescCols.length > 0) {
-              descColumnName = possibleDescCols[0];
-              console.warn(`Coluna "Descrição" não encontrada. Usando "${descColumnName}" para filtro.`);
-          } else {
-              console.error("Coluna de descrição não encontrada para filtro. Nomes das colunas:", originalDf.columns);
-              div1.innerHTML += "<p style='color:red;'>Erro: Coluna de descrição não encontrada para realizar o filtro.</p>";
-              return; // Não pode filtrar sem a coluna
-          }
-      }
+            const matchingRows = [];
+            let descColumnName = "Descrição";
+            if (!originalDf.columns.includes(descColumnName)) {
+                 const possibleDescCols = originalDf.columns.filter(col =>
+                     removeAcentos(col.toLowerCase()).startsWith("descri")
+                 );
+                 if (possibleDescCols.length > 0) {
+                     descColumnName = possibleDescCols[0];
+                     console.warn(`Coluna "Descrição" não encontrada. Usando "${descColumnName}" para filtro.`);
+                 } else {
+                     console.error("Coluna de descrição não encontrada para filtro. Nomes das colunas:", originalDf.columns);
+                     div1.innerHTML += "<p style='color:red;'>Erro: Coluna de descrição não encontrada para realizar o filtro.</p>";
+                     return;
+                 }
+            }
 
+            for (let i = 0; i < originalDf.shape[0]; i++) {
+                const rowDf = originalDf.loc({ rows: [i] });
+                const cellValue = rowDf.column(descColumnName).values[0];
+                const cellRaw = String(cellValue === null || cellValue === undefined ? "" : cellValue);
+                const cell = removeAcentos(cellRaw.toLowerCase());
 
-      for (let i = 0; i < originalDf.shape[0]; i++) {
-        const rowDf = originalDf.loc({ rows: [i] });
-        const cellValue = rowDf.column(descColumnName).values[0];
-        const cellRaw = String(cellValue === null || cellValue === undefined ? "" : cellValue);
-        const cell = removeAcentos(cellRaw.toLowerCase());
+                const matches = keywords.every(word => cell.includes(word));
+                if (matches) matchingRows.push(i);
+            }
 
-        const matches = keywords.every(word => cell.includes(word));
-        if (matches) matchingRows.push(i);
-      }
+            if (matchingRows.length > 0) {
+                const filteredDf = originalDf.loc({ rows: matchingRows });
+                renderTable(filteredDf); // renderTable já aplica a formatação
+            } else {
+                div1.innerHTML = "<p>Nenhum resultado encontrado para o filtro aplicado.</p>";
+            }
+        }
 
-      if (matchingRows.length > 0) {
-        const filteredDf = originalDf.loc({ rows: matchingRows });
-        renderTable(filteredDf);
-      } else {
-        div1.innerHTML = "<p>Nenhum resultado encontrado para o filtro aplicado.</p>";
-        // Opcional: exibir a tabela vazia com cabeçalhos
-        // const emptyDfWithCols = new dfd.DataFrame([], { columns: originalDf.columns });
-        // renderTable(emptyDfWithCols);
-      }
-    }
+        // --- Inicialização ---
+        document.addEventListener('DOMContentLoaded', () => {
+            populateMonthYearDropdown();
 
-    // --- Inicialização ---
-    document.addEventListener('DOMContentLoaded', () => {
-      populateMonthYearDropdown();
+            if (monthYearSelect.value) {
+                loadAndProcessFile(monthYearSelect.value);
+            }
 
-      // Carrega o arquivo para o mês/ano selecionado inicialmente
-      if (monthYearSelect.value) {
-        // Chamando a nova função
-        loadAndProcessFile(monthYearSelect.value);
-      }
+            monthYearSelect.addEventListener("change", (event) => {
+                loadAndProcessFile(event.target.value);
+            });
 
-      // Adiciona listener para o dropdown
-      monthYearSelect.addEventListener("change", (event) => {
-        // Chamando a nova função
-        loadAndProcessFile(event.target.value);
-      });
+            searchBtn.addEventListener("click", applyFilter);
 
-      // Adiciona listener para o botão de procurar
-      searchBtn.addEventListener("click", applyFilter);
+            filterBox.addEventListener("keypress", (event) => {
+                if (event.key === "Enter") {
+                    applyFilter();
+                }
+            });
+        });
 
-      // Opcional: aplicar filtro ao pressionar Enter no input
-      filterBox.addEventListener("keypress", (event) => {
-        if (event.key === "Enter") {
-          applyFilter();
-        }
-      });
-    });
-
-  </script>
-
-</body>
+    </script>
+    </body>
 </html>
