Adicionar HTML DER

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
         <ul>
             <li><a href="sinapi.html">SINAPI</a></li>
             <li><a href="sinapicomposicao.html">Composições SINAPI</a></li>
+	    <li><a href="DER.html">DER</a></li>
+	    <li><a href="DerComposicao.html">Composições DER</a></li>
         </ul>
     </nav>
 
