--- a/sinapi.html
+++ b/sinapi.html
@@ -84,7 +84,7 @@
             const startYear = 2021;
             const startMonth = 5; // maio
             const endYear = 2025;
-            const endMonth = 5;    // abril
+            const endMonth = 7;    // julho
 
             for (let year = startYear; year <= endYear; year++) {
                 const monthStart = (year === startYear) ? startMonth : 1;
